Fix build with maven
Signed-off-by: Oliver Geisel <geisel.oliver@googlemail.com>